--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "devDependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "got": "^10.0.4",
+    "json-graphql-server": "^2.1.3",
     "netlify-lambda": "^1.6.3",
-    "nodemon": "^1.19.2",
+    "nodemon": "^2.0.2",
     "serverless-http": "^2.3.0"
   }
 }
